--- a/altTrack.WebUI/Pages/About.cshtml
+++ b/altTrack.WebUI/Pages/About.cshtml
@@ -5,5 +5,13 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>About...</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            altTrack is an <strong>alt</strong>ernative <strong>track</strong>ing simulation for vehicles. It contains two ASP.NET Core Web API, one ASP.NET Core Web application and an Azure Function. It is just a demo of some business requirments.
+            All sub-contexts in application domain acts as a seperate module. The application is also demostrates some CI/CD tasks with Azure DevOps platform.
+        </div>
+    </div>
+</div>
 <img src="~/images/BriefInfo.PNG" />
