--- a/altTrack.WebUI/Pages/About.cshtml
+++ b/altTrack.WebUI/Pages/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AltTrack.Web.UI.AboutModel
 @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "About altTrack";
 }
 <h1>@ViewData["Title"]</h1>
 
